--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Menu Selection</title>
 </head>
 <body>
-        <h1>Select Language</h1>
+        <h1>Καλώς ήρθατε στο εστιατόριό μας! Welcome to our restaurant!</h1>
         <ul>
                 <li><a href="https://chondroskavos.github.io/qr-menu/greek.pdf">Ελληνικά</a></li>
                 <li><a href="https://chondroskavos.github.io/qr-menu/english.pdf">English</a></li>
