--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Menu Selection</title>
 </head>
 <body>
+  <img src="logo.png" alt="Logo" style="max-width: 100px;">
         <h1>Καλώς ήρθατε στο εστιατόριό μας! Welcome to our restaurant!</h1>
         <ul>
                 <li><a href="https://chondroskavos.github.io/qr-menu/greek.pdf">Ελληνικά</a></li>
