--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Menu Selection</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu Selection</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            text-align: center;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        img {
+            max-width: 100px;
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
-  <img src="logo.png" alt="Logo" style="max-width: 200px;">
-        <h1>Καλώς ήρθατε στο εστιατόριo μας. Welcome to our restaurant.</h1>
-        <ul>
-                <li><a href="https://chondroskavos.github.io/qr-menu/greek.pdf">Ελληνικά</a></li>
-                <li><a href="https://chondroskavos.github.io/qr-menu/english.pdf">English</a></li>
-                <li><a href="https://chondroskavos.github.io/qr-menu/italian.pdf">Italiano</a></li>
-        </ul>
+    <div class="container">
+        <img src="logo.png" alt="Logo">
+        <h1>Καλώς ήρθατε στο εστιατόριο μας. Welcome to our restaurant.</h1>
+        <ul>
+            <li><a href="https://chondroskavos.github.io/qr-menu/greek.pdf">Ελληνικά</a></li>
+            <li><a href="https://chondroskavos.github.io/qr-menu/english.pdf">English</a></li>
+            <li><a href="https://chondroskavos.github.io/qr-menu/italian.pdf">Italiano</a></li>
+        </ul>
+    </div>
 </body>
 </html>
