--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <img src="logo.png" alt="Logo">
         <h1>Καλώς ήρθατε στο εστιατόριο μας. Welcome to our restaurant.</h1>
         <ul>
-            <li><a href="https://chondroskavos.github.io/qr-menu/greek.pdf">Ελληνικά</a></li>
-            <li><a href="https://chondroskavos.github.io/qr-menu/english.pdf">English</a></li>
-            <li><a href="https://chondroskavos.github.io/qr-menu/italian.pdf">Italiano</a></li>
+            <li><a href="https://chondroskavos.github.io/qr-menu/greek-2.pdf">Ελληνικά</a></li>
+            <li><a href="https://chondroskavos.github.io/qr-menu/english-2.pdf">English</a></li>
+            <li><a href="https://chondroskavos.github.io/qr-menu/italian-2.pdf">Italiano</a></li>
         </ul>
     </div>
 </body>
